# ai-web-feeds

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  Dockerfile  FEED_DISCOVERY_PROMPT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SESSION_3_SUMMARY.md  IMPLEMENTATION_100_PERCENT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SESSION_2.md  IMPLEMENTATION_COMPLETE_SESSION_3.md  IMPLEMENTATION_STATUS_COMPLETE.md  IMPLEMENTATION_STATUS_PHASE_006.md  Makefile  PHASE_006_IMPLEMENTATION_SUMMARY.md  PHASE_006_PROGRESS_SESSION_3.md  PHASE_006_PROGRESS_UPDATE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_VISUALIZATION.md  RELEASE_NOTES.md  TASK_COMPLETION_VERIFICATION.md  commitlint.config.js  docker-compose.yml  env.example  package-lock.json  package.json  playwright.config.ts  pyproject.toml  quantum_feeds_validated.yaml
.claude/commands/: speckit.checklist.md  speckit.plan.md  speckit.specify.md
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/prompts/: speckit.constitution.md  speckit.plan.md
.cursor/commands/: speckit.plan.md
.cursor/rules/: specify-rules.mdc
.github/: AGENTS.md  README.md  copilot-instructions.md  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: add-feed.yml  bug-report.yml  cli-issue.yml  config.yml  documentation.yml  feature-request.yml  feed-update.yml  workflow-issue.yml
.github/prompts/: extend feeds.yaml.prompt.md  speckit.analyze.prompt.md  speckit.clarify.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  update AGENTS.md files.prompt.md
.github/workflows/: README.md  add-approved-feed.yml  auto-fix.yml  ci.yml  codeql-analysis.yml  coverage.yml  dependency-review.yml  dependency-updates.yml  greet-contributors.yml  label-manager.yml  pr-validation.yml  process-feeds.yml  python-quality.yml  quality-enforcement.yml  release-drafter.yml  release.yml  stale.yml  sync-labels.yml  validate-all-feeds.yml  validate-feed-submission.yml
.specify/memory/: constitution.md
.specify/specs/001-core-project-spec/: spec.md  tasks.md
.specify/specs/002-data-discovery-analytics/: README.md  research.md
.specify/specs/003-real-time-monitoring/: quickstart.md
.specify/specs/004-client-side-features/: spec.md
.specify/specs/005-advanced-ai-nlp/: clarifications.md  spec.md  tasks.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
apps/cli/: AGENTS.md  README.md  pyproject.toml
apps/cli/ai_web_feeds/cli/: __init__.py  __main__.py
apps/cli/ai_web_feeds/cli/commands/: __init__.py  analytics.py  enrich.py  export.py  fetch.py  load.py  monitor.py  nlp.py  opml.py  recommend.py  search.py  stats.py  test.py  validate.py  visualize.py
apps/web/: .gitignore  AGENTS.md  README.md  mdx-components.tsx  middleware.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  source.config.ts  verify-python-autodoc.sh  vitest.config.ts
apps/web/app/: global.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
apps/web/app/(home)/: page.tsx
apps/web/components/: graph-visualizer.tsx  page-actions.tsx
apps/web/lib/: export.ts  feeds-filters.ts  feeds.ts  import.ts  keyboard-shortcuts.ts  layout.shared.tsx  reading-stats.ts  rss.ts  theme-manager.ts  use-websocket.ts  user-identity.ts  validation-stats.ts  websocket.ts
apps/web/public/: site.webmanifest  sw.js
apps/web/scripts/: README.md  build-workers.ts  export-pdf-specific.ts  export-pdf.ts  generate-python-docs.mjs  lint-node.mjs  lint.ts  preload.ts
apps/web/service-worker/: registration.ts  sw.ts
apps/web/tests/: setup.ts
apps/web/workers/: search.worker.ts
data/: DATA_ASSETS_README.md  aiwebfeeds.db  feeds.categorized.opml  feeds.enriched.categorized.opml  feeds.enriched.example.yaml  feeds.enriched.json  feeds.enriched.opml  feeds.enriched.schema.json  feeds.enriched.yaml  feeds.json  feeds.opml  feeds.schema.json  feeds.yaml  init_aiwebfeeds_db.sql  pyproject.toml  sample_analytics_data.json  topics.schema.json  topics.yaml  validate_data_assets.py
scripts/: setup.sh
specs/: ideas.md
specs/001-core-project-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-project-spec/checklists/: requirements.md
specs/001-core-project-spec/contracts/: openapi.yaml
specs/002-data-discovery-analytics/: DEPLOYMENT.md  README.md  clarifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-discovery-analytics/checklists/: daily-standup.md  pr-review.md  test-coverage.md
specs/002-data-discovery-analytics/contracts/: openapi.yaml
specs/003-real-time-monitoring/: ANALYSIS.md  COMPLETION.md  clarifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-real-time-monitoring/contracts/: openapi.yaml  websocket.md
specs/004-client-side-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-client-side-features/checklists/: comprehensive.md
specs/004-client-side-features/contracts/: client-only.openapi.yaml  view-filters.schema.json
specs/004-community-curation/: spec.md
specs/005-advanced-ai-nlp/: clarifications.md  plan.md  spec.md  tasks.md
specs/006-advanced-analytics-bi/: spec.md
specs/006-advanced-visualization-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  traceability.md
tests/: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml
tests/e2e/: visualization.spec.ts
tests/fixtures/: mock_entities.json  sample_articles.json
tests/tests/: test_clustering.py  test_visualization_cache.py  test_visualization_models.py  test_visualization_validators.py
tests/tests/cli/integration/: test_cli_integration.py
tests/tests/cli/unit/: test_commands.py
tests/tests/e2e/: test_user_workflows.py
tests/tests/integration/: test_search_integration.py
tests/tests/performance/: test_benchmarks.py
(+185 files in other folders)
