[project]
name = "data-validation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "jsonschema>=4.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Validation script intentionally catches broad exceptions for robustness
per-file-ignores = { "validate_data_assets.py" = ["BLE001", "S110"] }
