[project]
name = "tests"
version = "0.1.0"
description = "Test suite for AI Web Feeds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-web-feeds",
    "hypothesis>=6.141.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
ai-web-feeds = { workspace = true }

[tool.pytest.ini_options]
# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Test paths
testpaths = ["."]

# Minimum Python version
minversion = "8.0"

# Command line options
addopts = [
    "-v",                                          # Verbose output
    "-ra",                                         # Show extra test summary info
    "--strict-markers",                            # Enable strict markers
    "--showlocals",                                # Show local variables in tracebacks
    "--cov=ai_web_feeds",                         # Coverage for ai_web_feeds package
    "--cov-report=html:reports/coverage",         # HTML coverage report
    "--cov-report=term-missing",                   # Terminal coverage report
    "--cov-branch",                                # Branch coverage
    "--durations=10",                              # Show slowest tests
    "--html=reports/test_report.html",            # HTML report
    "--self-contained-html",                       # Self-contained HTML
    "--timeout=300",                               # Timeout for tests
]

# Markers
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (multiple components)",
    "e2e: End-to-end tests (full workflows)",
    "slow: Slow running tests (may take several seconds)",
    "network: Tests requiring network access",
    "database: Tests requiring database",
]

# Logging
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "reports/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Warnings
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Collection
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
]

[tool.coverage.run]
source = ["ai_web_feeds"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]
branch = true
data_file = "reports/.coverage"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage"

[tool.pytest_timeout]
timeout = 300
timeout_method = "thread"
