[project]
name = "ai_web_feeds_cli"
version = "0.1.0"
description = "CLI for AI Web Feeds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-web-feeds",
    "rich>=13.7.0",
    "typer>=0.15.2",
]

[project.scripts]
aiwebfeeds = "ai_web_feeds.cli:main"

[tool.uv.sources]
ai_web_feeds = { workspace = true }
