[project]
name = "ai_web_feeds_cli"
version = "0.1.0"
description = "CLI for AI Web Feeds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-web-feeds",
    "rich>=13.7.0",
    "typer>=0.15.2",
]

[project.scripts]
aiwebfeeds = "ai_web_feeds.cli:main"

[tool.uv.sources]
ai_web_feeds = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# B008: Typer requires function calls in defaults for Option/Argument
# FBT001/FBT003: Boolean flags are standard for CLI applications
# PLR0912/PLR0915: Complex CLI commands can have many branches/statements
# PLR2004: Magic numbers in comparisons are acceptable in CLI output formatting
per-file-ignores = { "ai_web_feeds/cli/__init__.py" = ["B008", "FBT001", "FBT003", "PLR0912", "PLR0915", "PLR2004"] }
